# reddit-scraper-actor

./: .gitignore  Dockerfile  README.md  README_CI_CD.md  SECRETS_SETUP.md  SETUP.md  SETUP_COMPLETE.md  SETUP_SUMMARY.md  input_schema.json  main.py  package.json  pyproject.toml  requirements.txt  run_local.py  setup_git.sh  test-input.json
.actor/: actor.json  output_schema.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  deploy-apify.yml  docker-build-test.yml
documentation/: README.md
documentation/api-reference/: input-schema.md  output-format.md
documentation/deployment/: apify-deployment.md  ci-cd-overview.md  cicd-setup.md  secrets-setup.md
documentation/development/: code-formatting.md
documentation/getting-started/: setup-summary.md
documentation/learnings/: apify-actor-development.md  async-context-managers.md  testing-patterns.md
src/: __init__.py  config.py  main.py
src/services/: __init__.py  reddit_service.py
src/utils/: __init__.py  helpers.py
tests/: test_helpers.py  test_reddit_service.py
